--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="botton-container">
           <div class="buttons">
             <a href="#" class="btn btn-light">Learn More</a>
-            <a href="#" class="btn btn-primary">Donate Now</a>
+            <a href="#" class="btn btn-primary">Shop Now</a>
           </div>
         </div>
       </div>
